--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "base64-img": "^1.0.4",
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "moment": "^2.24.0"
   }
 }
